--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,17 @@
 body{
 	position: relative
  	width: 100%;
- 	margin-left:auto;
- 	margin-right:auto;
  	text-align:center;
+}
+
+#header{
+	position: relative;
+	width: 100%;
+	height: 10em;
+	background-color: #dddddd;
+}
+
+#main11{
+	position: relative;
+	width: 100%;
 }
